kube-proxy/role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-managed-apps
