kube-proxy/kube-proxy.yaml
kind: Service
apiVersion: v1
metadata:
 name: external-kube-proxy
spec:
 type: ClusterIP
 ports:
 - port: 6443
   targetPort: 6443
---
kind: Endpoints
apiVersion: v1
metadata:
 name: external-kube-proxy
subsets:
 - addresses:
     - ip: 192.168.0.6
   ports:
     - port: 6443
